Updated configs and IPs

--- a/splunk.inputs.conf
+++ b/splunk.inputs.conf
@@ -1,6 +1,6 @@
-# Syslog from SRLinux leaf
+# Syslog from SRLinux leaf, only needed for direct Syslog to the Splunk container itself
 # [tcp://clab-srl-splunk-lab-leaf1:514]
-[tcp://:514]
+[udp://:514]
 sourcetype = syslog
 # connection_host = dns
 connection_host = ip
