Use the standard message template (ISO dates sent have no millisecond values for some reason)

--- a/app-syslog-nokia_srlinux.conf
+++ b/app-syslog-nokia_srlinux.conf
@@ -4,7 +4,7 @@ block parser nokia_srlinux-parser() {
             r_set_splunk_dest_default(
                 index('netops')
                 sourcetype('nokia:router')
-                template('t_hdr_msg')
+                template('t_everything')
                 vendor_product('nokia_srlinux')
             );
         };
