Use custom built Docker container for S4SC - public one is too old and has compatibility issues

--- a/app-syslog-nokia_srlinux.conf
+++ b/app-syslog-nokia_srlinux.conf
@@ -5,7 +5,8 @@ block parser nokia_srlinux-parser() {
                 index('netops')
                 sourcetype('nokia:router')
                 template('t_everything')
-                vendor_product('nokia_srlinux')
+                vendor('nokia')
+                product('srlinux')
             );
         };
    };
