--- a/app-syslog-nokia_srlinux.conf
+++ b/app-syslog-nokia_srlinux.conf
@@ -13,9 +13,7 @@ block parser nokia_srlinux-parser() {
 };
 application nokia_srlinux[sc4s-syslog] {
 	filter {
-        program('sr_xdp_lc_' type(string) flags(prefix))
-        or program('sr_chassis_mgr' type(string))
-        or program('sr_supportd' type(string));
+        program('sr_' type(string) flags(prefix));
     };
     parser { nokia_srlinux-parser(); };
 };
